# nancy

./: .check_errors  .client_diff  .client_old.rs  .gitignore  .test_errors  Cargo.toml  build.rs  build.sh  build_and_run_scratch.sh  build_output.txt  build_output2.txt  fix_dreamer  fix_dreamer.rs  fix_grinder_lock.rs  fix_response.patch  fix_test.patch  fix_test_topology.patch  package-lock.json  package.json  parse_debug.rs  parse_test.rs  scratch.rs  test_errors.txt  test_errors2.txt  test_key.rs  test_parse  test_results.txt
.agents/rules/: project.md
.agents/skills/async-git-actor/: SKILL.md
.agents/skills/compile-time-markdown/: SKILL.md
.agents/skills/docker-sandboxing/: SKILL.md
.agents/skills/event-payload-ledger/: SKILL.md
.agents/skills/grinder-appview-isolation/: SKILL.md
.agents/skills/last-update-polling/: SKILL.md
.agents/skills/llm-eval-harness/: SKILL.md
.agents/skills/rust-test-coverage/: SKILL.md
.agents/skills/sealed-test-env-vars/: SKILL.md
.agents/skills/task-debugging/: SKILL.md
.agents/skills/uds-ipc-long-polling/: SKILL.md
.agents/skills/unified-planning/: SKILL.md
.agents/skills/xlink-microformat/: SKILL.md
.agents/workflows/: record-adr.md  verify-testing.md
artifacts/: implementation_plan.md
docs/: debugging-agentic-workflow.md  ideas.md
docs/adr/: 0001-use-rust-and-clap-for-cli.md  0002-git-repository-anchoring.md  0003-decentralized-identity-with-ed25519-did-key.md  0004-modular-command-architecture.md  0005-schema-registry.md  0006-events-library.md  0007-content-addressed-event-ids.md  0008-stateless-sqlite-indexing.md  0009-enforce-strict-test-coverage-using-llvm-cov.md  0010-native-git-orphaned-branch-log-storage.md  0011-batched-event-committing.md  0012-bollard-orchestrator-architecture.md  0013-hot-grinder-architecture.md  0014-environment-configuration-and-secrets.md  0015-coordinator-assignment-schema-refactor.md  0016-schema-cleanup-query-and-plan-payloads.md  0017-orphaned-branch-plan-architecture.md  0018-modular-grinder-operations.md  0019-llm-builder-architecture.md  0020-llm-tool-bindings.md  0021-autonomous-self-repair.md  0022-native-grinder-tool-boundaries.md  0023-llm-tool-module-pattern.md  0024-stateful-llm-client.md  0025-git-native-eval-tracing.md  0026-eval-runner-architecture.md  0027-compile-time-markdown-serialization.md  0028-agentic-perona-registry.md  0028-agentic-persona-registry.md  0029-pre-review-system-architecture.md  0030-unified-task-dag-orchestration.md  0031-event-driven-uds-ipc.md  0032-synchronous-uds-ipc-polling.md  0033-stateful-uds-ipc-long-polling.md  0034-coordinator-isolated-llm-execution.md  0035-planning-redux.md  0036-explicit-persona-role-requirements.md  0037-in-memory-git-branch-exploration.md  0038-grinder-introspection-architecture.md  0039-abstract-state-tree-introspection.md  (+37 more)
evals/decompose/: 1.yaml
evals/implement/: 1.yaml
evals/plan/: 1.yaml
evals/plan_implement/: 1.yaml
llm-macros/: Cargo.toml
llm-macros/src/: lib.rs  md.rs
llm-macros/tests/: great.md  md_test.rs
proptest-regressions/coordinator/: market.txt
schema/: Cargo.toml
schema/src/: lib.rs
scratch_test/: Cargo.toml
scratch_test/src/: main.rs
src/: agent.rs  lib.rs  main.rs
src/commands/: add_task.rs  cleanup.rs  coordinator.rs  debug_eval.rs  debug_tasks.rs  doer.rs  dreamer.rs  eval.rs  grind.rs  init.rs  mod.rs  run.rs
src/commands/xlink/: add.rs  audit.rs  common.rs  cull_orphans.rs  fix_position.rs  hydrate.rs  mod.rs
src/coordinator/: appview.rs  docker.rs  doer.rs  git.rs  grinder.rs  ipc.rs  llm_proxy.rs  market.rs  mod.rs  web.rs  workflow.rs
src/debug/: mod.rs  test_repo.rs
src/doer/: execute_task.rs  mod.rs  prompts.rs
src/dreamer/: mod.rs  task_view.rs
src/eval/: decompose.rs  implement.rs  mod.rs  plan.rs  plan_implement.rs
src/events/: index.rs  logger.rs  mod.rs  reader.rs  writer.rs
src/git/: actor.rs  messages.rs  mod.rs  repository.rs  tests.rs  types.rs
src/grind/: execute_task.rs  execute_task.rs.orig  mod.rs  perform_task.rs  plan_task.rs  prompts.rs
src/introspection/: mod.rs
src/llm/: api.rs  builder.rs  client.rs  mock.rs  mod.rs  schema.rs  tool.rs
src/personas/: a11y_expert.md  devils_advocate.md  devops_sre.md  historian.md  ideas_man.md  junior_developer.md  mod.rs  pedant.md  performance_expert.md  pragmatist.md  product_manager.md  project_expert.md  security_expert.md  senior_architect.md  staff_writer.md  team_player.md  testing_expert.md  ux_expert.md
src/pre_review/: mod.rs  runner.rs  schema.rs  session.rs
src/schema/: coordinator_config.rs  identity.rs  identity_config.rs  ipc.rs  llm.rs  mod.rs  registry.rs  task.rs  web.rs
src/tasks/: manager.rs  mod.rs
src/tools/: execution.rs  filesystem.rs  investigate.rs  mod.rs
style/: nancy.css
tests/: E2E_STRATEGY.md  doer_pull_e2e.rs  e2e_crash_recovery.rs  e2e_web.rs  grind_pull_e2e.rs  test_inf.rs  test_ui_bug.rs  unified_dag_e2e.rs  xlink_audit.rs
tests/common/: mock_gemini.rs  mod.rs
web/: Cargo.toml  index.html
web/src/: agents.rs  lib.rs  logs.rs  main.rs  repo.rs  schema.rs  tasks.rs
web/tests/: repo_tests.rs
