[workspace]
members = ["llm-macros"]

[package]
name = "nancy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bollard = "0.20.2"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3.5.2"
did-key = "0.2.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
gemini-client-api = "7.4.5"
git2 = "0.20.4"
hex = "0.4.3"
llm-macros = { version = "0.1.0", path = "llm-macros" }
rmcp = "1.3.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
schemars = { version = "1.2.1", features = ["derive"] }
sealed_test = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
strsim = "0.11.1"
tar = "0.4.45"
tempfile = "3.27.0"
tokio = { version = "1.51.0", features = ["full", "test-util"] }

[dev-dependencies]
reqwest = "0.13.2"
