[workspace]
members = ["llm-macros", "scratch_test", "web"]

[package]
name = "nancy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
askama = "0.12"
async-trait = "0.1.89"
axum = "0.8.8"
bollard = "0.20.2"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3.5.2"
did-key = "0.2.1"
dotenvy = "0.15.7"
futures-util = "0.3.32"
gemini-client-api = "7.4.5"
git2 = "0.20.4"
hex = "0.4.3"
ignore = "0.4.25"
llm-macros = { version = "0.1.0", path = "llm-macros" }
regex = "1.12.3"
rand = "0.8"
rmcp = "1.3.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
schemars = { version = "1.2.1", features = ["derive"] }
sealed_test = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
strsim = "0.11.1"
tar = "0.4.45"
tempfile = "3.27.0"
tokio = { version = "1.51.0", features = ["full", "test-util"] }
tokio-stream = "0.1.18"
tower = "0.5.3"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
uuid = { version = "1.23.0", features = ["v4"] }
rust-embed = "8.5"
mime_guess = "2.0"
web = { path = "web", features = ["ssr"] }
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = "0.8"
dugong = "0.4.0"

reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "json"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time", "local-time"] }
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
ansi-to-html = "0.2.2"

[dev-dependencies]
proptest = "1.4.0"

[[workspace.metadata.leptos]]
name = "nancy"
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "nancy"
bin-package = "nancy"
lib-package = "web"
lib-features = ["hydrate"]
style-file = "style/nancy.css"
assets-dir = "public"

[profile.dev.package.web]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
