[package]
name = "web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8", features = ["hydrate"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }

# these features are standard for cargo-leptos mapping
console_error_panic_hook = "0.1"
axum = { version = "0.8", optional = true }
leptos_axum = { version = "0.8", optional = true }
tree-sitter-highlight = { version = "0.26.8", optional = true }
tree-sitter-rust = { version = "0.24.2", optional = true }
tree-sitter-md = { version = "0.5.3", optional = true }
tree-sitter-typescript = { version = "0.23.2", optional = true }
tree-sitter-javascript = { version = "0.25.0", optional = true }
syntect = { version = "5.3.0", optional = true }
ignore = { version = "0.4.25", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
wasm-bindgen = { version = "0.2.117", optional = true }
git2 = { version = "0.20.4", optional = true }

[features]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen"]
ssr = [
    "leptos/ssr", 
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "dep:axum", 
    "dep:leptos_axum",
    "dep:tree-sitter-highlight",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-md",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-javascript",
    "dep:syntect",
    "dep:ignore",
    "dep:git2"
]
tree-sitter-highlight = ["dep:tree-sitter-highlight"]
tree-sitter-rust = ["dep:tree-sitter-rust"]
tree-sitter-md = ["dep:tree-sitter-md"]
tree-sitter-typescript = ["dep:tree-sitter-typescript"]
tree-sitter-javascript = ["dep:tree-sitter-javascript"]
syntect = ["dep:syntect"]
ignore = ["dep:ignore"]
wasm-bindgen = ["dep:wasm-bindgen"]

[dev-dependencies]
sealed_test = "1.1.0"
tempfile = "3.27.0"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
