[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
gloo-net = "0.3.1"
wasm-bindgen-futures = "0.4.50"
schema = { path = "../schema" }
wasm-bindgen = "0.2.117"
gloo-timers = { version = "0.4.0", features = ["futures"] }
urlencoding = "2.1.3"
web-sys = { version = "0.3.70", features = ["HtmlSelectElement", "EventTarget", "AbortController", "AbortSignal"] }
pulldown-cmark = "0.10.0"
js-sys = "0.3.70"
futures = "0.3"

[dev-dependencies]
sealed_test = "1.1.0"
